# guardrail-hub

./: .gitignore  AGENTS.md  Makefile  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.toml
kit/: manifest.toml
kit/docs/: architecture.skeleton.toml
kit/tests/guardrail/: AGENTS.md  _component_pages.py  _cpp_graph.py  _diagram_toolkit.py  _index.py  _metrics_render.py  _metrics_toolkit.py  test_layering_contract.py  test_metrics_snapshot.py
src/guardrail_hub/: __init__.py  __main__.py  archmap.py  budget_ledger.py  budgets.py  cli.py  config.py  coupling.py  docs_render.py  drift.py  errors.py  gitio.py  history.py  hotspots.py  installer.py  kit.py  logging_setup.py  models.py  repo_scan.py  store.py  web.py
src/guardrail_hub/static/: hub.css  hub.js
src/guardrail_hub/templates/: base.html  compare.html  doc.html  drift.html  ledger.html  overview.html  repo.html
src/guardrail_hub/templates/partials/: budget_table.html  status_badges.html
tests/: conftest.py  test_budget_ledger.py  test_budgets.py  test_config.py  test_coupling.py  test_docs_render.py  test_drift.py  test_gitio.py  test_history.py  test_hotspots.py  test_installer.py  test_kit_cpp_integration.py  test_kit_dogfood.py  test_kit_manifest.py  test_metrics_diff.py  test_metrics_history.py  test_private_access.py  test_repo_scan.py  test_store.py  test_web.py
tests/golden/: architecture_prefilled.toml
tests/guardrail/: AGENTS.md  _common.py  _component_pages.py  _metrics_toolkit.py  conftest.py  test_domain_model_diagram.py  test_layering_contract.py  test_metrics_budgets.py  test_metrics_snapshot.py
