[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrail-hub"
version = "0.1.0"
description = "Canonical home of the diagrams-as-tests guardrail kit + cross-repo architecture dashboard"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
  { name = "Dave Snowdon" },
]
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pyright>=1.1",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "grimp>=3.14",
  "import-linter>=2.12",
  "networkx>=3.4",
  "httpx>=0.27",
]

[project.scripts]
guardrail-hub = "guardrail_hub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guardrail_hub"]

[tool.hatch.build.targets.wheel.force-include]
"kit" = "guardrail_hub/_kit"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
respect-gitignore = true
extend-exclude = ["kit"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"] # line length handled by the formatter

[tool.ruff.lint.isort]
known-first-party = ["guardrail_hub"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
exclude = ["kit", "**/node_modules", "**/__pycache__", ".venv"]

[tool.importlinter]
root_package = "guardrail_hub"

[[tool.importlinter.contracts]]
name = "Foundation must not import Core or Entrypoints"
type = "forbidden"
source_modules = [
  "guardrail_hub.errors",
  "guardrail_hub.models",
  "guardrail_hub.config",
  "guardrail_hub.logging_setup",
]
forbidden_modules = [
  "guardrail_hub.gitio",
  "guardrail_hub.repo_scan",
  "guardrail_hub.budgets",
  "guardrail_hub.history",
  "guardrail_hub.store",
  "guardrail_hub.docs_render",
  "guardrail_hub.drift",
  "guardrail_hub.kit",
  "guardrail_hub.installer",
  "guardrail_hub.web",
  "guardrail_hub.cli",
]

[[tool.importlinter.contracts]]
name = "Core must not import Entrypoints"
type = "forbidden"
source_modules = [
  "guardrail_hub.gitio",
  "guardrail_hub.repo_scan",
  "guardrail_hub.budgets",
  "guardrail_hub.history",
  "guardrail_hub.store",
  "guardrail_hub.docs_render",
  "guardrail_hub.drift",
  "guardrail_hub.kit",
  "guardrail_hub.installer",
]
forbidden_modules = [
  "guardrail_hub.web",
  "guardrail_hub.cli",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = ["kit"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
